--- a/swann_config.yaml
+++ b/swann_config.yaml
@@ -174,8 +174,8 @@ hub:
 
   extraConfig:
     00-first-config: |
+      c.KubeSpawner.environment = {'NB_UMASK': '0000'}
       c.KubeSpawner.allow_privilege_escalation = True
       c.KubeSpawner.args = ["--allow-root"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
-
