--- a/config.yaml
+++ b/config.yaml
@@ -196,6 +196,9 @@ hub:
         - daniella
         - praneeth
         - collin
+        - nbeutler
+        - jdye
+        - cdibiase
       # admin_access: true
     JupyterHub:
       authenticator_class: "nativeauthenticator.NativeAuthenticator"
@@ -207,6 +210,7 @@ hub:
 
   extraConfig:
     00-first-config: |
+      c.KubeSpawner.environment = {'NB_UMASK': '0000'}
       c.KubeSpawner.allow_privilege_escalation = True
       c.KubeSpawner.args = ["--allow-root"]
       import os, nativeauthenticator
