--- a/swann_config.yaml
+++ b/swann_config.yaml
@@ -45,7 +45,7 @@ singleuser:
   # default image
   image:
     name: brineylab/jupyterhub-deeplearning
-    tag: v2024-04-11
+    tag: v2024-05-17
 
   # alternate profiles (images)
   profileList:
@@ -53,7 +53,7 @@ singleuser:
       description: "default brineylab data analysis environment, including interpreters for Python and R as well as VS Code <br> v2024-02-21"
       default: true
       kubespawner_override:
-        image: brineylab/jupyterhub-datascience:v2024-04-11
+        image: brineylab/jupyterhub-datascience:v2024-05-17
         lifecycle_hooks:
           postStart:
             exec:
@@ -63,7 +63,7 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning - 2 gpu"
-      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2024-02-21"
+      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions and deepspeed support  <br> v2024-05-17"
       kubespawner_override:
         extra_resource_limits:
           nvidia.com/gpu: 2
@@ -76,7 +76,7 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning - 4 gpu"
-      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2024-02-21"
+      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions and deepspeed support  <br> v2024-05-17"
       kubespawner_override:
         extra_resource_limits:
           nvidia.com/gpu: 4
@@ -88,20 +88,19 @@ singleuser:
                 - "-c"
                 - >
                   mkdir -p ${HOME}/codeserver;
-    - display_name: "deep learning - 8 gpu"
-      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2024-02-21"
-      kubespawner_override:
-        extra_resource_limits:
-          nvidia.com/gpu: 8
-        lifecycle_hooks:
-          postStart:
-            exec:
-              command:
-                - "sh"
-                - "-c"
-                - >
-                  mkdir -p ${HOME}/codeserver;
-
+#    - display_name: "deep learning - 8 gpu"
+#      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions and deepspeed support  <br> v2024-05-17"
+#      kubespawner_override:
+#        extra_resource_limits:
+#          nvidia.com/gpu: 8
+#        lifecycle_hooks:
+#          postStart:
+#            exec:
+#              command:
+#                - "sh"
+#                - "-c"
+#                - >
+#                  mkdir -p ${HOME}/codeserver;
   # storage
   storage:
     # don't change default volume
@@ -174,6 +173,7 @@ hub:
 
   extraConfig:
     00-first-config: |
+      c.KubeSpawner.environment = {'NB_UMASK': '0000'}
       c.KubeSpawner.allow_privilege_escalation = True
       c.KubeSpawner.args = ["--allow-root"]
       import os, nativeauthenticator
