--- a/new_mcnulty_config.yaml
+++ b/new_mcnulty_config.yaml
@@ -108,24 +108,48 @@ singleuser:
                   mkdir -p ${HOME}/codeserver;
   # storage
   storage:
-    # don't change default volume
-    # dynamic:
-    #   storageClass: nfs-marlo-ssd
-    capacity: 250Gi
+    # change default volume
+    dynamic:
+      storageClass: nfs-wallace-jh-nvme
+    capacity: 10Gi
 
     extraVolumes:
       # shared volume
       - name: nfs-propjoe-shared
         persistentVolumeClaim:
           claimName: nfs-propjoe-shared
+      # wallace workspace volume
+      - name: nfs-wallace-shared
+        persistentVolumeClaim:
+          claimName: nfs-wallace-shared
+      # sequencing data: NovaSeq
+      - name: nfs-avon-novaseq6k
+        persistentVolumeClaim:
+          claimName: nfs-avon-novaseq6k
+      # sequencing data: NextSeq
+      - name: nfs-avon-nextseq2k
+        persistentVolumeClaim:
+          claimName: nfs-avon-nextseq2k
+      # sequencing data: ONT
+      - name: nfs-stringer-ont
+        persistentVolumeClaim:
+          claimName: nfs-stringer-ont
+      # dshm
       - name: dshm
         emptyDir:
           medium: Memory
           sizeLimit: "10Gi"
     extraVolumeMounts:
-      # shared volume
       - name: nfs-propjoe-shared
         mountPath: /home/jovyan/shared
+      - name: nfs-wallace-shared
+        mountPath: /home/jovyan/workspace
+      - name: nfs-avon-novaseq6k
+        mountPath: /home/jovyan/sequencing_runs/novaseq
+      - name: nfs-avon-nextseq2k
+        mountPath: /home/jovyan/sequencing_runs/nextseq
+      - name: nfs-stringer-ont
+        mountPath: /home/jovyan/sequencing_runs/ont
       - name: dshm
         mountPath: /dev/shm
 
