--- a/storage/storage_classes/wallace-shared-sc.yaml
+++ b/storage/storage_classes/wallace-shared-sc.yaml
@@ -1,15 +1,10 @@
-# wallace-sc.yaml
+# wallace-shared-sc.yaml
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-wallace-ssd
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
+  name: nfs-wallance-shared-nvme
 provisioner: nfs.csi.k8s.io
-parameters:
-  server: wallace.scripps.edu
-  share: /nfs_share
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
