--- a/storage/claims/wallace-shared-pvc.yaml
+++ b/storage/claims/wallace-shared-pvc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-wallance-shared
+  name: nfs-wallace-shared
   namespace: jupyterhub
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: nfs-wallance-shared-nvme
-  volumeName: nfs-wallance-shared
+  storageClassName: nfs-wallace-shared-nvme
+  volumeName: nfs-wallace-shared
   resources:
     requests:
       storage: 1700Gi
