--- a/storage/volumes/wallace-shared-pv.yaml
+++ b/storage/volumes/wallace-shared-pv.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-wallance-shared
+  name: nfs-wallace-shared
 spec:
   capacity:
     storage: 1700Gi
   accessModes:
     - ReadWriteMany
-  storageClassName: nfs-wallance-shared
+  storageClassName: nfs-wallace-shared
   nfs:
     server: wallace.scripps.edu
     path: "/data/brineylab_shared"
