fix wallace storage pt 2

--- a/storage/volumes/wallace-shared-pv.yaml
+++ b/storage/volumes/wallace-shared-pv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nfs-wallace-shared
 spec:
   capacity:
-    storage: 1700Gi
+    storage: 1Ti
   accessModes:
     - ReadWriteMany
   storageClassName: nfs-wallace-shared
