--- a/storage/storage_classes/wallace-jh-sc.yaml
+++ b/storage/storage_classes/wallace-jh-sc.yaml
@@ -14,7 +14,8 @@ reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
   - hard
-  - nfsvers=4.1
+  - proto=tcp
+ # - nfsvers=4.1
 # apiVersion: storage.k8s.io/v1
 # kind: StorageClass
 # metadata:
