--- a/storage/storage_classes/wallace-jh-sc.yaml
+++ b/storage/storage_classes/wallace-jh-sc.yaml
@@ -8,8 +8,8 @@ metadata:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: nfs.csi.k8s.io
 parameters:
-  server: wallace.scripps.edu
-  share: /data/jupyterhub
+  server: 192.168.1.3 # wallace.scripps.edu over mlnx
+  share: /wallace_data_zfspool/jupyterhub
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
