--- a/templates/templates-configmap.yaml
+++ b/templates/templates-configmap.yaml
@@ -73,9 +73,7 @@ data:
               </tr>
               {% for spawner in named_spawners %}
                 <tr class="home-server-row" data-server-name="{{ spawner.name }}">
-                  {# name #}
                   <td>{{ spawner.name }}</td>
-                  {# profile type #}
                   <td>
                     {% if spawner.user_options.profile and spawner.ready %}
                       {{ spawner.user_options.profile }}
@@ -83,7 +81,6 @@ data:
                       &nbsp
                     {% endif %}
                   </td>
-                  {# num gpus #}
                   <td>
                     {% if spawner.user_options.GPUs and spawner.ready %}
                       {{ spawner.user_options.GPUs }}
@@ -95,12 +92,10 @@ data:
                       0
                     {% endif %}
                   </td>
-                  {# url #}
                   <td>
                     <a class="server-link {% if not spawner.ready %}hidden{% endif %}"
                       href="{{ user.server_url(spawner.name) }}">{{ user.server_url(spawner.name) }}</a>
                   </td>
-                  {# activity #}
                   <td class='time-col'>
                     {% if spawner.last_activity %}
                       {{ spawner.last_activity.isoformat() + 'Z' }}
@@ -108,7 +103,6 @@ data:
                       Never
                     {% endif %}
                   </td>
-                  {# actions #}
                   <td>
                     <a role="button"
                       class="stop-server btn btn-xs btn-danger{% if not spawner.active %} hidden{% endif %}"
@@ -148,15 +142,13 @@ data:
         require(["home"]);
       </script>
     {% endblock script %}
-  
+
   spawn.html: |
     {% extends "page.html" %}
     {% if announcement_spawn is string %}
       {% set announcement = announcement_spawn %}
     {% endif %}
-
     {% block main %}
-
     <div class="container">
       {% block heading %}
       <div class="row text-center">
@@ -183,19 +175,175 @@ data:
           </div>
         </form>
       </div>
+
+    <!-- GPU Availability Section -->
+    <div class="row col-sm-offset-2 col-sm-8" style="margin-top: 20px; align-items: center;">
+      <div class="gpu-status" style="font-size: 1.3em; text-align: center;">
+        <h3>GPU Availability</h3>
+        <div class="table-wrapper" style="width: 40%; margin: 0 auto;">
+          <table id="gpu-status-container" class="table table-bordered" style="display: none;">
+            <thead>
+              <tr>
+                <th>Node Profile</th>
+                <th>Available GPUs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- This section will be dynamically updated -->
+            </tbody>
+          </table>
+        </div>
+        <h4 style="font-weight: normal; margin: 0;">Your server will fail to launch if you request more <s>cats</s> GPUs than available!</h4>
+      </div>
     </div>
-
+    </div>
     {% endblock %}
-
     {% block script %}
-    {{ super() }}
-    <script>
-    // setup onSubmit feedback
-    $('form').submit((e) => {
-      var form = $(e.target);
-      form.find('.feedback-container>input').attr('disabled', true);
-      form.find('.feedback-container>*').toggleClass('hidden');
-      form.find('.feedback-widget>*').toggleClass('fa-pulse');
-    });
-    </script>
+      {{ super() }}
+      <script>
+      // setup onSubmit feedback
+      $('form').submit((e) => {
+        var form = $(e.target);
+        form.find('.feedback-container>input').attr('disabled', true);
+        form.find('.feedback-container>*').toggleClass('hidden');
+        form.find('.feedback-widget>*').toggleClass('fa-pulse');
+      });
+
+      // Function to update GPU status
+      function updateGpuStatus() {
+        fetch('http://172.29.180.92:5000/gpu_status')
+          .then(response => response.json())
+          .then(data => {
+            const container = document.getElementById('gpu-status-container');
+            container.innerHTML = ''; // Clear previous content
+
+            data.forEach(gpuInfo => {
+              const availableGpus = gpuInfo.capacity - gpuInfo.total_gpu_requests;
+              container.innerHTML += `
+                <tr>
+                  <td>${gpuInfo.node_profile}</td>
+                  <td>${availableGpus}&nbsp;${'😸'.repeat(availableGpus)}</td>
+                </tr>
+              `; 
+            });
+            // Show the table once data is loaded
+            container.style.display = 'table';
+          })
+          .catch(error => {
+            console.error('Error fetching GPU status:', error);
+            const container = document.getElementById('gpu-status-container');
+            container.innerHTML = `<p>Error fetching data: ${error.message}</p>`; // Use backticks for template literals
+          });
+      }
+
+      // Update GPU status every 10 seconds
+      setInterval(updateGpuStatus, 10000);
+
+      // Initial update
+      updateGpuStatus();
+      </script>
     {% endblock %}
+
+  spawn_pending.html: |
+    {% extends "page.html" %}
+    {% block main %}
+      <div class="container">
+        <div class="row">
+          <div class="text-center">
+            {% block message %}
+              <p>Your server is starting up.</p>
+              <p>You will be redirected automatically when it's ready for you.</p>
+            {% endblock message %}
+            <div class="progress">
+              <div id="progress-bar"
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuenow="0"
+                  aria-valuemin="0"
+                  aria-valuemax="100">
+                <span class="sr-only"><span id="sr-progress">0%</span> Complete</span>
+              </div>
+            </div>
+            <p id="progress-message"></p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <details id="progress-details">
+              <summary>Event log</summary>
+              <div id="progress-log"></div>
+            </details>
+          </div>
+        </div>
+        <!-- Embedding the Munchy Worm game on the spawn pending page -->
+        <div style="margin-top: 20px; text-align: center;">
+          <h3>Play Munchy Worm</h3>
+          <object data="https://antibody-software.com/munchy-worm-game/index" type="text/html" style="width: 100%; height: 800px;">
+            <p>Your browser does not support this object.</p>
+          </object>
+        </div>
+      </div>
+    {% endblock main %}
+    {% block script %}
+      {{ super() }}
+      <script type="text/javascript">
+        require(["jquery"], function($) {
+          $("#refresh").click(function() {
+            window.location.reload();
+          });
+
+          // hook up event-stream for progress
+          var evtSource = new EventSource("{{ progress_url }}");
+          var progressMessage = $("#progress-message");
+          var progressBar = $("#progress-bar");
+          var srProgress = $("#sr-progress");
+          var progressLog = $("#progress-log");
+
+          evtSource.onmessage = function(e) {
+            var evt = JSON.parse(e.data);
+            console.log(evt);
+            if (evt.progress !== undefined) {
+              // update progress
+              var progText = evt.progress.toString();
+              progressBar.attr('aria-valuenow', progText);
+              srProgress.text(progText + '%');
+              progressBar.css('width', progText + '%');
+            }
+            // update message
+            var html_message;
+            if (evt.html_message !== undefined) {
+              progressMessage.html(evt.html_message);
+              html_message = evt.html_message;
+            } else if (evt.message !== undefined) {
+              progressMessage.text(evt.message);
+              html_message = progressMessage.html();
+            }
+            if (html_message) {
+              progressLog.append(
+                $("<div>")
+                .addClass('progress-log-event')
+                .html(html_message)
+              );
+            }
+
+            if (evt.ready) {
+              evtSource.close();
+              // reload the current page
+              // which should result in a redirect to the running server
+              window.location.reload();
+            }
+
+            if (evt.failed) {
+              evtSource.close();
+              // turn progress bar red
+              progressBar.addClass('progress-bar-danger');
+              // open event log for debugging
+              $('#progress-details').prop('open', true);
+            }
+          };
+
+          // signal that page has finished loading (mostly for tests)
+          window._jupyterhub_page_loaded = true;
+        });
+      </script>
+    {% endblock script %}
