fix munchy worm dimensions & update users

--- a/auth/users.yaml
+++ b/auth/users.yaml
@@ -16,16 +16,16 @@ data:
       - jonathan
       - pragati
       - nitesh
-      - simone
       - sean
       - morgan
       - benjamin
       - jyothi
       - nathan
-      - karenna
       - daniella
-      - praneeth
       - collin
       - nbeutler
       - jdye
       - cdibiase
+      - mshafiei
+      - yunhao
+      - jmagura
