--- a/templates/templates-configmap.yaml
+++ b/templates/templates-configmap.yaml
@@ -247,7 +247,7 @@ data:
   spawn_pending.html: |
     {% extends "page.html" %}
     {% block main %}
-      <div class="container">
+      <div class="container" style="width: 100%; max-width: 1400px; padding: 20px;">
         <div class="row">
           <div class="text-center">
             {% block message %}
@@ -276,11 +276,10 @@ data:
           </div>
         </div>
         <!-- Embedding the Munchy Worm game on the spawn pending page -->
-        <div style="margin-top: 20px; text-align: center;">
-          <h3>Play Munchy Worm</h3>
-          <object data="https://antibody-software.com/munchy-worm-game/index" type="text/html" style="width: 100%; height: 800px;">
+        <div style="text-align: center; width: 100%"; padding: 20px 0">
+          <h3>Play some Muchy Worm while your server launches!</h3>
+            <object data="https://antibody-software.com/munchy-worm-game/index" style="width: 100%; height: 80vh; border: none; overflow: auto;">
             <p>Your browser does not support this object.</p>
-          </object>
         </div>
       </div>
     {% endblock main %}
